--- a/index.html
+++ b/index.html
@@ -495,21 +495,21 @@
 </div>
 </footer>
 
-<script src="./YFIM_files/jquery.min.js"></script>
-<script src="./YFIM_files/popper.min.js"></script>
-<script src="./YFIM_files/bootstrap.min.js"></script>
-<script src="./YFIM_files/headroom.min.js"></script>
+<script src="./jquery.min.js"></script>
+<script src="./popper.min.js"></script>
+<script src="./bootstrap.min.js"></script>
+<script src="./headroom.min.js"></script>
 
-<script src="./YFIM_files/onscreen.min.js"></script>
-<script src="./YFIM_files/nouislider.min.js"></script>
-<script src="./YFIM_files/bootstrap-datepicker.min.js"></script>
-<script src="./YFIM_files/yfim.js"></script>
-<script src="./YFIM_files/jquery.cookie.min.js"></script>
-<script src="./YFIM_files/clipboard.min.js"></script>
-<script src="./YFIM_files/layer.js"></script>
-<script src="./YFIM_files/jquery.qrcode.min.js"></script>
-<link type="text/css" href="./YFIM_files/atom-one-dark.css" rel="stylesheet">
-<script src="./YFIM_files/highlight.pack.js"></script>
+<script src="./onscreen.min.js"></script>
+<script src="./nouislider.min.js"></script>
+<script src="./bootstrap-datepicker.min.js"></script>
+<script src="./yfim.js"></script>
+<script src="./jquery.cookie.min.js"></script>
+<script src="./clipboard.min.js"></script>
+<script src="./layer.js"></script>
+<script src="./jquery.qrcode.min.js"></script>
+<link type="text/css" href="./atom-one-dark.css" rel="stylesheet">
+<script src="./highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 </body></html>
