--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 <meta name="author" content="YFIM">
 <title>YFIM</title>
 
-<link href="./YFIM_files/yfimlogo_blue.png" rel="icon" type="image/png">
+<link href="./yfimlogo_blue.png" rel="icon" type="image/png">
 
 
 
-<link href="./YFIM_files/nucleo.css" rel="stylesheet">
-<link href="./YFIM_files/font-awesome.min.css" rel="stylesheet">
+<link href="./nucleo.css" rel="stylesheet">
+<link href="./font-awesome.min.css" rel="stylesheet">
 
-<link type="text/css" href="./YFIM_files/yfim.css" rel="stylesheet">
-<link href="./YFIM_files/layer.css" type="text/css" rel="styleSheet" id="layermcss"></head>
+<link type="text/css" href="./yfim.css" rel="stylesheet">
+<link href="./layer.css" type="text/css" rel="styleSheet" id="layermcss"></head>
 <body>
 <header class="header-global">
 <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light">
 <div class="container">
 <a class="navbar-brand mr-lg-5" href="https://yfi.mobi/">
-<img src="./YFIM_files/yfim.png">
+<img src="./yfim.png">
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
 <span><i class="fa fa-list-ul" style="font-size: 23px"></i></span>
@@ -31,7 +31,7 @@
 <div class="row">
 <div class="col-6 collapse-brand">
 <a href="https://yfi.mobi/">
-<img src="./YFIM_files/yfim1.png">
+<img src="./yfim1.png">
 </a>
 </div>
 <div class="col-6 collapse-close">
@@ -52,7 +52,7 @@
 <div class="dropdown-menu-inner">
 <a href="https://yearn.finance/vaults" target="_blank" class="media d-flex align-items-center">
 <div class="icon icon-shape">
-<img src="./YFIM_files/vaults.png" style="width: 52px;height: 52px">
+<img src="./vaults.png" style="width: 52px;height: 52px">
 </div>
 <div class="media-body ml-3">
 <h5 class="heading text-dark mb-md-1"><strong>Vaults</strong></h5>
@@ -61,7 +61,7 @@
 </a>
 <a href="https://yearn.finance/earn" target="_blank" class="media d-flex align-items-center">
 <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-<img src="./YFIM_files/earn.png" style="width: 52px;height: 52px">
+<img src="./earn.png" style="width: 52px;height: 52px">
 </div>
 <div class="media-body ml-3">
 <h5 class="heading text-dark mb-md-1"><strong>Earn</strong></h5>
@@ -70,7 +70,7 @@
 </a>
 <a href="https://yinsure.finance/" target="_blank" class="media d-flex align-items-center">
 <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-<img src="./YFIM_files/cover.png" style="width: 52px;height: 52px">
+<img src="./cover.png" style="width: 52px;height: 52px">
 </div>
 <div class="media-body ml-3">
 <h5 class="heading text-dark mb-md-1"><strong>Cover</strong></h5>
@@ -126,22 +126,22 @@
 
 <section class="section-hero section-shaped my-0">
 <div class="shape shape-style-1 shape-dark">
-<span class="span-150"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w32"></span>
-<span class="span-50"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w24"></span>
-<span class="span-50"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w24"></span>
-<span class="span-75"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w32"></span>
-<span class="span-100"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w32"></span>
-<span class="span-75"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w48"></span>
-<span class="span-50"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w24"></span>
-<span class="span-100"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w32"></span>
-<span class="span-50"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w24"></span>
-<span class="span-100"><img src="./YFIM_files/yfimlogo.png" class="yfimlogo w32"></span>
+<span class="span-150"><img src="./yfimlogo.png" class="yfimlogo w32"></span>
+<span class="span-50"><img src="./yfimlogo.png" class="yfimlogo w24"></span>
+<span class="span-50"><img src="./yfimlogo.png" class="yfimlogo w24"></span>
+<span class="span-75"><img src="./yfimlogo.png" class="yfimlogo w32"></span>
+<span class="span-100"><img src="./yfimlogo.png" class="yfimlogo w32"></span>
+<span class="span-75"><img src="./yfimlogo.png" class="yfimlogo w48"></span>
+<span class="span-50"><img src="./yfimlogo.png" class="yfimlogo w24"></span>
+<span class="span-100"><img src="./yfimlogo.png" class="yfimlogo w32"></span>
+<span class="span-50"><img src="./yfimlogo.png" class="yfimlogo w24"></span>
+<span class="span-100"><img src="./yfimlogo.png" class="yfimlogo w32"></span>
 </div>
 <div class="container shape-container d-flex align-items-center">
 <div class="col px-0">
 <div class="row justify-content-center align-items-center">
 <div class="col-lg-8 text-center pt-lg">
-<img src="./YFIM_files/yfim.png" style="width: 200px;" class="img-fluid">
+<img src="./yfim.png" style="width: 200px;" class="img-fluid">
 <p class="lead text-white mt-4 mb-5 lang">QUICK GAME是基于区块链技术构架打造的分布式游戏聚合平台。它以去中心化的结构，直接将整个游戏生态链上的组成分子有机地链接起来，实现个体价值的直接对接、无损流通和安全存储
  Token的权益证明，用户可以通过YFIM Token取出自己原来存入的代币及相应的收益。</p>
 </div>
@@ -149,7 +149,7 @@
 <div class="row align-items-center justify-content-around stars-and-coded">
 <span class="text-white alpha-7 ml-3">Star us on</span>
 <a href="https://github.com/YFIMobi" target="_blank" title="Support us on Github">
-<img src="./YFIM_files/github-white-slim.png" style="height: 22px; margin-top: -3px">
+<img src="./github-white-slim.png" style="height: 22px; margin-top: -3px">
 </a>
 </div>
 </div>
@@ -183,7 +183,7 @@
 <div class="card-profile" style="margin-top: 0;margin-bottom: 15px">
 <div class="card-profile-stats d-flex justify-content-center" style="padding-left: 15px;padding-right: 15px">
 <div style="border: solid;border-radius: 4px" class="col-4">
-<span><img src="./YFIM_files/yfimlogo_blue.png" style="width: 32px;height: 32px"></span>
+<span><img src="./yfimlogo_blue.png" style="width: 32px;height: 32px"></span>
 <span class="heading"><span class="balance">0 </span> YFIM</span>
 <span class="description lang" data-params="v12">余额</span>
 </div>
@@ -261,7 +261,7 @@
 <div class="card card-lift--hover shadow border-0" style="min-height: 599px">
 <div class="card-body py-5">
 <div class="icon icon-shape icon-shape-warning rounded-circle mb-4" style="background-color: rgba(252, 140, 114, 1);">
-<img src="./YFIM_files/yfimlogo.png" style="width: 24px;height: 24px;background-color: transparent">
+<img src="./yfimlogo.png" style="width: 24px;height: 24px;background-color: transparent">
 </div>
 <h6 class="text-warning text-uppercase font-weight-bold lang">项目Token分布</h6>
 <p class="description font-weight-bold mt-3">• <span class="lang">QGT将代币分向四方：机构轮，市场私募轮，项目官方团队，游戏挖矿。其中机构轮占Token总量的50%，机构一年后开始分四个季度解锁完成，每个季度解锁25%；市场私募轮占Token总量的30%，上线一个月后开始每周等额解锁25%，一个月时间全部完成解锁；项目官方团队占10%；游戏挖矿占Token总量的10%。
